test/frontend/fail/increment_string.osl
shader test(output string s = "") {
    s++;
    s += 1;
}
